welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^Program:1: error: not found: value boolean
boolean haveBaggle() {
^